syntax = "proto3";

package execution;

message ExecutionSaveCommand {
   required string symbol = 1;
   required string market = 2;
   required float price = 3;
   required float quantity = 4;
   required int64 executionEpoch = 5;
   required string stateSymbol = 6;
}

message Response {
   bool success = 1;
   string error = 2;
}

// Execution saves messages sent to the service from a queue
service Execution {
   rpc SaveMessage(ExecutionSaveCommand) returns (Response) {}
}

