syntax = "proto3";
package pb;

// protoc -I pb/ pb/sportevent.proto --go_out=plugins=grpc:pb


enum sport {
  BASEBALL = 0;
  BASKETBALL = 1;
  FOOTBALL = 2;
  BOXING = 3;
  GOLF = 4;
  NASCAR = 5;
  TENNIS = 6;
}

message ChatMessage {
  string email = 1;
  string username = 2;
  string message = 3;
  int64 creation_date = 4;
  string event_type = 5;
}


message Event {
  sport sport = 1;
  string match_title = 2;
  string data_event = 3;
  int64 creation_date = 4;
}

message Execution {
  string symbol = 1;
  string market = 2;
  float price = 3;
  float quantity = 4;
  int64 executionEpoch = 5;
  string stateSymbol = 6;
}

